// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component renders as expected 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="IMAGE_MOCK"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <p
    className="App-intro"
  >
    To get started22, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;

exports[`Storyshots Component/App/Stand Alone another change 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="IMAGE_MOCK"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
    <h2>
      everything
    </h2>
  </header>
  <p
    className="App-intro"
  >
    To get started22, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;

exports[`Storyshots Component/App/Stand Alone the default change 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="IMAGE_MOCK"
    />
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <p
    className="App-intro"
  >
    To get started22, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
</div>
`;
